# app/internal/infra/web/handler/create_currency.go
@@ -99,6 +99,18 @@ func (h CreateCurrencyResponse) MapToResponse(u entity.Currency) CreateCurrencyR
 	}
 }
 
+// CreateCurrency godoc
+//
+//	@Summary		Create Currency
+//	@Description	create a currency
+//	@Tags			Currencies
+//	@Accept			json
+//	@Produce		json
+//	@Param			currency	body		CreateCurrencyRequest	true	"new currency"
+//	@Success		201			{object}	CreateCurrencyResponse
+//	@Failure		500			{object}	exception.InternalServerException
+//	@Failure		400			{object}	exception.BadRequestException
+//	@Router			/currency [post]
 func (h CreateCurrencyHandler) Execute(c *gin.Context) {
 	body := CreateCurrencyRequest{}
 
